swapping in images in old content

--- a/content/Camille_and_John_Are_Getting_Married.html
+++ b/content/Camille_and_John_Are_Getting_Married.html
@@ -5,9 +5,8 @@ status=published
 tags=Photography, Family
 ~~~~~~
 <p>Camille and John will be getting married next year. As they've only been engaged less than a month, they've not set a date yet.</p>
-<a href = "http://gallery.hjsoft.com/gallery2/v/Photography/2011-06-26_Camille_John/Camille_John_0008.jpg.html">
-<p><img style = "border: 0; width: 400px;" src = "http://gallery.hjsoft.com/gallery2/d/63610-2/Camille_John_0008.jpg" /></a></p>
-<p><a href = "http://gallery.hjsoft.com/gallery2/v/Photography/2011-06-26_Camille_John/Camille_John_0006.jpg.html">
-<img style = "border: 0; width: 400px;" src = "http://gallery.hjsoft.com/gallery2/d/63604-2/Camille_John_0006.jpg"/></a></p>
-<p><a href = "http://gallery.hjsoft.com/gallery2/v/Photography/2011-06-26_Camille_John/Camille_John_0004.jpg.html">
-<img style = "border: 0; width: 400px;" src = "http://gallery.hjsoft.com/gallery2/d/63598-2/Camille_John_0004.jpg"/></a></p>
+<p>
+    <a href = "https://www.flickr.com/photos/jflinchbaugh/5883192950/in/photolist-c8aTG1-9YgrFU-9XQ2f2-9XSUid-98kXMF">
+        <img src = "https://c2.staticflickr.com/6/5071/5883192950_5249e42b50.jpg">
+    </a>
+</p>
