tag the chili recipe i'm always trying to find

--- a/content/Chili_Recipe.html
+++ b/content/Chili_Recipe.html
@@ -2,7 +2,7 @@ title=Chili Recipe
 date=2005-08-08 12:07:18.445
 type=post
 status=published
-tags=Miscellaneous, Friends, Home
+tags=Miscellaneous, Friends, Home, Chili, Recipe, Cooking
 ~~~~~~
 <p>I made a bit of chili a couple weeks ago over the fire, and it came out pretty well, so I wrote it down to make it my official recipe.</p>
 <h1>John's Chili (8 qt)</h1>
